Завершена версия 1.0.0 проекта pdf_processor

--- a/Обработка_PDF/config.json
+++ b/Обработка_PDF/config.json
@@ -1,5 +1,6 @@
 {
     "default_data": {
+        "Номер отправителя (№ ПСА)": "",
         "Номер акта рекламации": "",
         "Дата акта": "",
         "Страна": "Россия",
@@ -12,7 +13,6 @@
         "Требование покупателя": "исследование"
     },
     "engine_models": [
-        "33445.1000140-АЗ2",
         "534230",
         "53425-А04",
         "53435",
@@ -26,11 +26,11 @@
         "53675.1000175-А03",
         "ЯМЗ-154-кВт"
     ],
-    "excel_path": "D:/РАБОТА/2025-2019_ЖУРНАЛ УЧЁТА.xlsm",
+    "excel_path": "D:/РАБОТА/2025-2019_ЖУРНАЛ УЧЁТА_1.xlsm",
     "about_info": {
-        "Программа": "PDF to Excel Converter",
+        "Программа": "Акты рекламаций - Обработка и учет",
         "Версия": "1.0.0",
-        "Назначение": "Программа для обработки актов рекламаций и сохранения данных в Excel",
+        "Назначение": "Программа для SMART-обработки актов рекламаций и сохранения данных в ЖУРНАЛ УЧЕТА",
         "Возможности": [
             "Распознавание текста из PDF",
             "Автоматическое извлечение данных",
