В Обработка_PDF удалены лишние файлы

--- a/Обработка_PDF/config.json
+++ b/Обработка_PDF/config.json
@@ -26,7 +26,7 @@
         "53675.1000175-А03",
         "ЯМЗ-154-кВт"
     ],
-    "excel_path": "D:/РАБОТА/2025-2019_ЖУРНАЛ УЧЁТА_1.xlsm",
+    "excel_path": "D:/РАБОТА/2025-2019_ЖУРНАЛ УЧЁТА.xlsm",
     "about_info": {
         "Программа": "Акты рекламаций - Обработка и учет",
         "Версия": "1.0.0",
