--- a/Обработка_PDF/config.json
+++ b/Обработка_PDF/config.json
@@ -19,6 +19,7 @@
         "53435-А02",
         "5344.1000186",
         "53443.1000140-А42",
+        "53445.1000140-А37",
         "53445.1000140-АЗ2",
         "53445.1000140-АЗ7",
         "534450",
@@ -27,6 +28,13 @@
         "ЯМЗ-154-кВт"
     ],
     "excel_path": "D:/РАБОТА/2025-2019_ЖУРНАЛ УЧЁТА.xlsm",
+    "invoice_fields": [
+        "Номер акта Приобретателя",
+        "Номер акта Потребителя",
+        "Дата поступления изделий",
+        "Номер накладной прихода",
+        "Дата накладной"
+    ],
     "about_info": {
         "Программа": "Акты рекламаций - Обработка и учет",
         "Версия": "1.0.0",
@@ -43,7 +51,7 @@
             "Легко расширяется"
         ],
         "Идея": "Василенок Игорь",
-        "Разработчик": "Василенок Игорь и LM claude-3-5-sonnet-20241022",
+        "Разработчик": "Василенок Игорь и LLM claude-3-5-sonnet-20241022",
         "Контакты": "vasilenok.igor@mail.ru"
     }
 }
