--- a/Обработка_PDF/config.json
+++ b/Обработка_PDF/config.json
@@ -27,7 +27,7 @@
         "53675.1000175-А03",
         "ЯМЗ-154-кВт"
     ],
-    "excel_path": "D:/РАБОТА/2025-2019_ЖУРНАЛ УЧЁТА.xlsm",
+    "excel_path": "//Server/otk/1 ГАРАНТИЯ на сервере/2025-2019_ЖУРНАЛ УЧЁТА.xlsm",
     "invoice_fields": [
         "Номер акта Приобретателя",
         "Номер акта Потребителя",
