Выпущена версия act_processing 1.0.1

--- a/Обработка_PDF/Релизы/1.0.0/config.json
+++ b/Обработка_PDF/Релизы/1.0.0/config.json
@@ -37,7 +37,7 @@
     ],
     "about_info": {
         "Программа": "Акты рекламаций - Обработка и учет",
-        "Версия": "1.0.1 от 15-07-2025",
+        "Версия": "1.0.0",
         "Назначение": "Программа для SMART-обработки актов рекламаций и сохранения данных в ЖУРНАЛ УЧЕТА",
         "Возможности": [
             "Распознавание текста из PDF",
