--- a/Справка_по_рекламациям/config.json
+++ b/Справка_по_рекламациям/config.json
@@ -13,6 +13,7 @@
         "Требование покупателя": "исследование"
     },
     "engine_models": [
+        "53403.1000175-20",
         "534230",
         "53425-А04",
         "53435",
@@ -37,7 +38,7 @@
     ],
     "about_info": {
         "Программа": "Акты рекламаций - Обработка и учет",
-        "Версия": "1.0.0",
+        "Версия": "1.0.1 от 15-07-2025",
         "Назначение": "Программа для SMART-обработки актов рекламаций и сохранения данных в ЖУРНАЛ УЧЕТА",
         "Возможности": [
             "Распознавание текста из PDF",
